<resources>
    <string name="app_name">Quizapp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="todo">TODO</string>
    <string name="sets">Sets</string>
    <string name="option3">Option3</string>
    <string name="_1_10">1/10</string>
    <string name="question">Question</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option4">Option4</string>
    <string name="_10">10</string>
    <string name="loading">Loading...</string>
</resources>
