<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FA5420"
        android:orientation="vertical">

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1_10"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/count"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#F8BA51"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/_10"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="#FFA000"
            android:elevation="3dp"
            android:padding="16dp"
            android:text="@string/option1"
            android:textSize="18sp"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:backgroundTint="#FFA000"
            android:padding="16dp"
            android:elevation="3dp"
            android:layout_marginBottom="16dp"
            android:text="@string/option2"
            android:textSize="18sp"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:backgroundTint="#FFA000"
            android:padding="16dp"
            android:elevation="3dp"
            android:layout_marginBottom="16dp"
            android:text="@string/option3"
            android:textSize="18sp"
            android:textColor="@color/colorWhite" tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:backgroundTint="#FFA000"
            android:textSize="18sp"
            android:padding="16dp"
            android:elevation="3dp"
            android:layout_marginBottom="16dp"
            android:text="@string/option4"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>